* jeżeli adres_docelowy jest pusty podaje adres odbiorcy
* sortowanie wg keywordów