@@ -17,7 +17,12 @@
                      Width="150"/>
         </DockPanel>
         <ListView x:Name="mainView" DockPanel.Dock="Bottom" GridViewColumnHeader.Click="SortTable" Grid.Row="2">
-
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem x:Name="btnCompleted" Header="Wykonano" Click="btnCompleted_Click"></MenuItem>
+                    <MenuItem x:Name="btnUndo" Header="Cofnij status" Click="btnUndo_Click"></MenuItem>
+                </ContextMenu>
+            </ListView.ContextMenu>
             <ListView.View >
                 <GridView x:Name="tableView" AllowsColumnReorder="True">
                     <GridViewColumn Header="test1" Width="100"/>
@@ -25,10 +30,11 @@
             </ListView.View>
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
+                    <EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListViewItem_PreviewMouseLeftButtonDown"/>
                     <Style.Triggers>
-                        <Trigger Property="IsMouseOver" Value="True">
+                       <!--- <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="IsSelected" Value="True"/>
-                        </Trigger>
+                        </Trigger>-->
                     </Style.Triggers>
                 </Style>
             </ListView.ItemContainerStyle>
